fix body unintended overflow

--- a/frontend/src/home/base.css
+++ b/frontend/src/home/base.css
@@ -1,6 +1,6 @@
 html,
 body {
-    height: 100%;
+    overflow-x:hidden;
     font-family: 'Open Sans',Arial,sans-serif;
 }
 /* Reset */
