--- a/frontend/src/home/main.css
+++ b/frontend/src/home/main.css
@@ -4,7 +4,7 @@ main {
     margin-top:8rem;
 }
 main.searching {
-    top:0%;
+    top:0;
 }
 
 .search-area {
